<resources>
    <string name="app_name">west-kruiskade</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="art">Art</string>
    <string name="scan_qr_code">QR</string>
    <string name="more">more</string>
    <string name="home_screen">Home screen</string>
    <string name="contact_us">Contact us</string>
    <string name="homefrag">homeFrag</string>
    <string name="default_location">West-Kruiskade</string>
    <string name="west_kruiskade_tour_guide">West-Kruiskade tour guide</string>
    <string name="no_sure_where_to_start">No sure where to start?</string>
    <string name="go_for_one_of_our_featured_attractions">Go for one of our featured attractions.</string>
    <string name="art_image">artImage</string>
    <string name="shopping_image">shopping_image</string>
    <string name="restaurant_image">restaurant_image</string>
    <string name="west_kruiskade_tour_guide_ngo_for_one_of_our_featured_attractions">Not sure where to start from?\nGo for one of our featured attractions.</string>
    <string name="view_and_locate_over_200_n_street_art_pieces">View and locate over 200\n street art pieces</string>
    <string name="shopping">Shopping</string>
    <string name="restaurants">Restaurants</string>
    <string name="taste_food_from_various_n_nationalities">Taste food from various\n nationalities</string>
    <string name="shop_local_products_at_low_n_prices">Shop local products at low\n prices</string>
    <string name="street_art">Street art</string>
    <string name="search">Search</string>
    <string name="about_artist">About Artist</string>
    <string name="backbutton">backButton</string>
    <string name="see_location">See location</string>
    <string name="how_can_we_help_you">How can we help you?</string>
    <string name="please_feel_free_to_send_us_your_question_suggestion_or_comment_we_will_reply_within_24_hrs">Please feel free to send us your question, suggestion or comment. We will reply within 24 hrs.</string>
    <string name="submit">Send message</string>
    <string name="menu_remote">Remote</string>
    <string name="menu_loader">Loader</string>
    <string name="menu_room">Room</string>
    <string name="found_result_plural">art pieces found for</string>
    <string name="found_result_singular">art piece found for</string>
    <string name="desc_doggo">doggo</string>
    <string name="button_retry">Retry</string>
    <string name="label_error">Something went wrong, please try again</string>
    <string name="please_enter_your_message">Please enter your message</string>
    <string name="john_smith">John Smith</string>
    <string name="jsmith78_inholland_nl">Jsmith78@inholland.nl</string>
    <string name="subject">Subject</string>
    <string name="_0_11">0:00</string>
    <string name="_1_11">-0:00</string>
    <string name="image">image</string>
    <string name="blank_txt">""</string>
    <string name="description">description</string>
    <string name="title">title</string>
    <string name="scanner">scanner</string>
    <string name="search_view_hint">Artist name</string>
    <string name="email_address_error_msg">Invalid email address or field is empty</string>
    <string name="message_body_error_msg">Message field is empty or too short</string>
    <string name="subject_filed_empty">Subject field is empty</string>
    <string name="ok">OK</string>
    <string name="camera_permission_denied_msg">Denying camera permissions will disable barcode scanner</string>
    <string name="permission_denied_title">Camera Permissions</string>
    <string name="deny_permission_btn">Deny</string>
    <string name="grant_permission_btn">Permit</string>
    <string name="art_museum_background_1">Established in 2017, the street art museum is a community-based, contemporary eco-museum that uses street art to dialogue between stakeholders of Rotterdam and visitors to the region. The museum collection.</string>
    <string name="art_museum_background_2">has ±300 artworks varying from small pieces to monumental murals, all available for viewing free of charge.</string>
    <string name="intro_heading">Rotterdam street art museum</string>
    <string name="collapse">Collapse</string>
    <string name="expand">Expand</string>
    <string name="art_gallery">Art Gallery</string>
    <string name="close">Close</string>
    <string name="Invalid_QR_code">Invalid QR code, scan a code associated with an artwork</string>
    <string name="no_internet_error_msg">No Internet, please check your internet connection</string>
    <string name="local_db_data_loaded">Data loaded from local database</string>
</resources>