<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorLine"
    tools:context="nl.project.westkruiskade.ui.fragments.ContactFormFragment">

    <include
        android:id="@+id/back_btn"
        layout="@layout/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size25dp"
        android:layout_marginEnd="@dimen/size8dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/contact_us"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/size25dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/back_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- message body -->


    <!-- submit form button -->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="@dimen/size18sp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/roboto"
        android:letterSpacing="0.04"
        android:lineSpacingExtra="3sp"
        android:text="@string/please_feel_free_to_send_us_your_question_suggestion_or_comment_we_will_reply_within_24_hrs"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/guideline13"

        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_message_body"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/white_rectangle_no_stroke"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/please_enter_your_message"
                android:inputType="textMultiLine|textNoSuggestions"
                android:padding="@dimen/size10sp"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />
        </RelativeLayout>

    </ScrollView>

    <!-- senders name text box -->

    <Button
        android:id="@+id/submit_form_btn"
        android:layout_width="@dimen/size0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size24dp"
        android:layout_marginTop="@dimen/size16dp"
        android:layout_marginEnd="@dimen/size24dp"
        android:background="@drawable/green_rectangle"
        android:lines="1"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/guideline14" />

    <!-- senders email address text box -->

    <!-- email subject text boxt -->

    <EditText
        android:id="@+id/edit_text_email_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size8dp"
        android:layout_marginTop="@dimen/size20dp"
        android:layout_marginEnd="@dimen/size8dp"
        android:background="@drawable/white_rectangle_no_stroke"
        android:drawableStart="@drawable/ic_baseline_markunread_24"
        android:drawablePadding="@dimen/size10sp"
        android:ems="10"
        android:hint="@string/jsmith78_inholland_nl"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:minHeight="@dimen/size48dp"
        android:padding="@dimen/padding5sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextSubject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size8dp"
        android:layout_marginTop="@dimen/size8dp"
        android:layout_marginEnd="@dimen/size8dp"
        android:background="@drawable/white_rectangle_no_stroke"
        android:ems="10"
        android:hint="@string/subject"
        android:inputType="textPersonName|textNoSuggestions"
        android:lines="1"
        android:minHeight="@dimen/size48dp"
        android:padding="@dimen/size10sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_email_address"
        app:layout_constraintVertical_bias="0.303" />

    <ImageView
        android:id="@+id/email_check_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginEnd="@dimen/size8dp"
        android:src="@drawable/ic_baseline_check_circle_24"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_email_address"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_email_address"
        app:layout_constraintTop_toTopOf="@+id/edit_text_email_address" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/size16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/size16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size32dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="295dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="558dp" />

</androidx.constraintlayout.widget.ConstraintLayout>