<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/result"
        android:layout_width="@dimen/size0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size5dp"
        android:layout_weight="1"
        android:padding="@dimen/size5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/size5dp"
        app:cardElevation="@dimen/size3dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size8dp">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="@dimen/size0dp"
                android:layout_height="@dimen/size0dp"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/searchResultsTxt"
                android:layout_width="@dimen/size0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size8dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:textSize="@dimen/size15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/ivImage"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="@dimen/size0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size8dp"
                android:layout_marginTop="@dimen/size8dp"
                android:ellipsize="end"
                android:maxLines="5"
                android:text="@string/description"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivImage"
                app:layout_constraintTop_toBottomOf="@+id/searchResultsTxt" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="47dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="59dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>