<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorLine"
    android:padding="8dp"
    tools:context="nl.project.westkruiskade.ui.fragments.ArtLandingPageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/museumCard"
        android:layout_width="@dimen/size0dp"
        android:layout_height="@dimen/size0dp"
        android:background="@color/white"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@+id/art_gallery_guide_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size8dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/intro_heading"
            android:textColor="@color/black"
            android:textSize="@dimen/size18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view_pager2" />

        <TextView
            android:id="@+id/museum_intro"
            android:layout_width="@dimen/size0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/roboto"
            android:letterSpacing="@dimen/size0.01"
            android:lineSpacingExtra="@dimen/size8sp"
            android:text="@string/art_museum_background_1"
            android:textColor="@color/black"
            android:textSize="@dimen/size16sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline11"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/size6dp"
            android:layout_marginEnd="8dp"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/size8sp"
            android:paddingBottom="@dimen/size6dp"
            android:text="@string/art_museum_background_2"
            android:textColor="@color/black"
            android:textSize="@dimen/size16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/museum_intro"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager2"
            android:layout_width="@dimen/size0dp"
            android:layout_height="@dimen/size0dp"
            android:layout_marginTop="@dimen/size16dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingStart="1dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/museum_intro"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="254dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="232dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rvContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size0dp"
        android:layout_marginTop="@dimen/size15dp"
        android:background="@drawable/white_rectangle_no_stroke"
        android:padding="@dimen/padding5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/art_gallery_guide_line"
        app:layout_constraintVertical_bias="0.0">

        <ToggleButton
            android:id="@+id/artGalleryToggleBtn"
            android:layout_width="@dimen/size67dp"
            android:layout_height="@dimen/size35dp"
            android:background="@drawable/expand_collapse_back_ground"
            android:backgroundTint="#87CAC5"
            android:textOff=""
            android:textOn=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/recycle_view"
            layout="@layout/recycle_view_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artGalleryToggleBtn" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size8dp"
            android:layout_marginBottom="@dimen/size8dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/art_gallery"
            android:textColor="@color/black"
            android:textSize="@dimen/size18sp"
            app:layout_constraintBottom_toTopOf="@+id/recycle_view"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/art_gallery_guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

</androidx.constraintlayout.widget.ConstraintLayout>